# ghc-debug-brick-web

./: CHANGELOG.md  LICENSE  README.md  ghc-debug-brick.cabal  ghc-debug-web.cabal
src/: Common.hs  Filter.hs  Graph.hs  IOTree.hs  JS.hs  Main.hs  Model.hs  Param.hs  Render.hs
src/js/: e2.js  expandToggle.js  filterTextBox.js  s2.js  s3.js  searchLimit.js  selectTreeLink.js  takeSnapshot.js
