cabal-version:       2.4
name:                ghc-debug-web
version:             0.1.0.0
synopsis:            A simple web GUI using ghc-debug
description:         A simple web GUI using ghc-debug, runs on localhost:3000
bug-reports:         https://github.com/KC1423/ghc-debug-web/issues
license:             BSD-3-Clause
license-file:        LICENSE
category:            Development
author:              Keith Cory
maintainer:          kc1423@ic.ac.uk
build-type:          Simple
extra-doc-files:     CHANGELOG.md
extra-source-files:  src/js/*.js
                   , src/DejaVuSans.ttf

executable ghc-debug-web
  main-is:             Main.hs
  other-modules:       Model
                     , Namespace
                     , IOTree
                     , Common
                     , Lib
                     , Render
                     , JS
                     , Filter
                     , Param
                     , Graph
  build-depends:       base >=4.16 && <5
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , microlens-platform
                     , text
                     , vty-crossplatform
                     , vty >= 6
                     , time
                     , deepseq
                     , microlens
                     , ghc-debug-client == 0.7.0.0
                     , ghc-debug-common == 0.7.0.0
                     , ghc-debug-convention == 0.7.0.0
                     , unordered-containers
                     , exceptions
                     , contra-tracer
                     , bytestring
                     , byteunits
                     , scotty
                     , lucid
                     , network
                     , split
                     , graphviz
                     , JuicyPixels
                     , Rasterific
                     , colour
                     , FontyFruity
                     , eventlog2html
                     , ghc-events
                     , wai-extra
                     , process
                     , aeson
                     , wai-middleware-static
                     , http-types
                     , async
  hs-source-dirs:    src
  default-language:    Haskell2010
  ghc-options: -threaded -Wall "-with-rtsopts=-N -qn1"

source-repository head
  type:     git
  location: git://github.com/KC1423/ghc-debug-web.git
