cabal-version:       2.4
name:                ghc-debug-web
version:             0.1.0.0
synopsis:            A simple web GUI using ghc-debug
description:         A simple web GUI using ghc-debug, runs on localhost:3000
bug-reports:         https://github.com/KC1423/ghc-debug-web/issues
license:             BSD-3-Clause
license-file:        LICENSE
category:            Development
author:              Keith Cory
maintainer:          kc1423@ic.ac.uk
build-type:          Simple
extra-doc-files:     CHANGELOG.md
extra-source-files:  src/js/*.js
                   , src/DejaVuSans.ttf

executable ghc-debug-web
  main-is:             Main.hs
  other-modules:       Model
                     , Namespace
                     , IOTree
                     , Common
                     , Lib
                     , Render
                     , JS
                     , Filter
                     , Param
                     , Graph
  build-depends:       base >=4.16 && <5
                     , bytestring
                     , containers <1
                     , directory <2
                     , filepath <2
                     , microlens-platform <1
                     , text <3
                     , time <2
                     , deepseq <2
                     , microlens <1
                     , ghc-debug-client == 0.7.0.0
                     , ghc-debug-common == 0.7.0.0
                     , ghc-debug-convention == 0.7.0.0
                     , unordered-containers <1
                     , exceptions <1
                     , contra-tracer <1
                     , bytestring <1
                     , byteunits <1
                     , scotty >=0.22 && <1
                     , lucid >=2.11 && <3
                     , network >=3.2 && <4
                     , split >=0.2 && <1
                     , graphviz >=2999.20 && <3000
                     , JuicyPixels >=3.3 && <4
                     , Rasterific >=0.7 && <1
                     , colour >=2.3 && <3
                     , FontyFruity >=0.5 && <1
                     , eventlog2html >=0.12 && <1
                     , ghc-events >=0.20 && <1
                     , wai-extra >=3.1 && <4
                     , process >=1.6 && <2
                     , aeson >=2.2 && <3
                     , wai-middleware-static >=0.9 && <1
                     , http-types >=0.12 && <1
                     , async >=2.2 && <3
  hs-source-dirs:    src
  default-language:    Haskell2010
  ghc-options: -threaded -Wall "-with-rtsopts=-N -qn1"

source-repository head
  type:     git
  location: git://github.com/KC1423/ghc-debug-web.git
